--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,15 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
-.App {
-  text-align: center;
-  padding: 2% 5%;
-}
 
-.App * {
+html {
   box-sizing: border-box;
+  overflow-x:hidden;
+  width: 100%;
+  height:100%;
+  text-align: center;
 }
 
 ul {
-  padding: 0;
   list-style: none;
-}
-
-p {
-  margin: 5px 0;
-}
-
-.display-none {
-  display: none;
-}
-.showSuggestions {
-  display: block;
 }
 
 input[type="text"],
@@ -29,11 +17,61 @@ input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
   outline: none;
-  border: 1px solid #ccc;
-  font-size: 14px;
+  border: 3px solid #000000;;
+  font-size: 12px;
   line-height: 20px;
   align-self: center;
-  height: 38px;
+  height: 40px;
+  min-width: 20em;
+  max-width: 50em;
+}
+
+input[type="text"] {
+  margin-bottom:5%;
+}
+
+input[type="number"] {
+  max-width: 12em;
+  min-width: 5em;
+  margin-bottom:8%;
+}
+
+.App {
+  text-align: center;
+  align-items: center;
+  padding: 2% 5%;
+  background-color: grey;
+  color: #00BDD3 ;
+}
+
+.App * {
+  box-sizing: border-box;
+  overflow: hidden;
+  max-width: 100%;
+  align-content: center;
+}
+
+.display-none {
+  display: none;
+}
+.showSuggestions {
+  display: inline-block;
+}
+
+.citysearch-label {
+  margin-top: 20%;
+  font-size: 16px;
+  color: lightgrey ;
+  border: 3px solid;
+  font-family: 'Roboto', sans-serif;
+}
+
+.number-label {
+  font-size: 16px;
+  color: lightgrey;
+  font-family: 'Roboto', sans-serif;
+  margin-right:2%;
+  border: 3px solid;
 }
 
 .city {
@@ -47,23 +85,27 @@ input[type="number"] {
   max-width: 300px;
   margin: auto;
   position: relative;
+  margin-top: 25%;
 }
 
 .suggestions {
   width: 250px;
-  position: absolute;
-  z-index: 2;
+  z-index: 3;
   align-self: center;
   margin: 0;
-  top: 43px;
+  position: absolute;
+  bottom: 60px;
+  padding-top: 3%;
+  max-height: 200px;
+  overflow-y: scroll;
   font-size: 14px;
-  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.247);
 }
 
 .suggestions > li {
   text-align: left;
   padding: 8px 6px 8px 10px;
-  background-color: #eee;
+  background-color: rgb(236 249 251);
   cursor: default;
 }
 
@@ -73,27 +115,9 @@ input[type="number"] {
 }
 
 .suggestions > li:hover {
-  background-color: #bcdcdb;
+  background-color: #dce2ca;
 }
 
-.event {
-  padding: 10px 10px 35px;
-  margin-bottom: 10px;
-  text-align: left;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  position: relative;
-}
-
-.details-btn {
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  padding: 5px 8px;
-  border-radius: 4px;
-  outline: none;
-  cursor: pointer;
-}
 
 .name {
   font-size: 18px;
@@ -115,8 +139,8 @@ input[type="number"] {
 }
 
 .numberOfEvents {
-  width: 200px;
-  margin: 20px auto;
+  max-width: 50em;
+  min-width: 20em;
   text-align: center;
 }
 
@@ -129,7 +153,6 @@ input[type="number"] {
 }
 
 .Alert {
-  position: fixed;
   top: 20px;
 }
 
@@ -140,65 +163,63 @@ input[type="number"] {
 }
 .data-vis-wrapper .recharts-responsive-container {
   min-width: 100%;
+  max-width: 100%;
   display: flex;
 }
 .recharts-surface {
-  overflow: visible;
+  overflow: scroll;
 }
 
-.login-button {
-  color: #494949;
-  text-transform: uppercase;
-  text-decoration: none;
-  background: #ffffff;
-  padding: 20px;
-  border: 4px solid #494949;
-  display: inline-block;
-  transition: all 0.4s ease 0s;
-  min-width: 10rem;
-  margin: 1rem;
+.events-city-header {
+  color: #F2DA8B;
+  color: #EE5A66;
+  margin-bottom: 2%;
+  font-family: 'Roboto', sans-serif;
 }
 
-.google-btn {
-  width: 184px;
-  height: 42px;
-  margin: 1rem;
-  background-color: #4285f4;
-  border-radius: 2px;
-  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+.chart-header {
+  font-size:35px;
+    color: #0096EF;
+    color: #1D4355;
+    margin-bottom: 5%;
+    margin-top: 10%;
+    font-family: 'Rubik', sans-serif;
 }
-.google-btn:hover {
-  box-shadow: 0 0 6px #4285f4;
-}
-.google-btn:active {
-  background: #1669f2;
-}
-.google-icon-wrapper {
-  position: absolute;
-  margin-top: 1px;
-  margin-left: 1px;
-  width: 40px;
-  height: 40px;
-  border-radius: 2px;
-  background-color: #fff;
-}
-.google-icon {
-  position: absolute;
-  margin-top: 11px;
-  margin-left: -8px;
-  width: 18px;
-  height: 18px;
-}
-.btn-text {
-  float: right;
-  margin: 11px 11px 0 0;
-  color: #fff;
-  font-size: 14px;
-  letter-spacing: 0.2px;
-  font-family: "Roboto";
+.chart-title-wrapper {
+  margin-bottom: 2%;
+  font-size: 16px;
+  color: #F3D487;
+  font-family: 'Roboto', sans-serif;
 }
 
 
+.see-suggestions-input {
+  margin-bottom:2%;
+}
+
+.page-title {
+  font-size:60px;
+  color: #1D4355;
+  margin-top:15%;
+}
+
+.page-subtitle {
+  font-size:30px;
+  color:rgb(32, 166, 243);
+  transform: rotate(-8deg);
+  font-family: 'Mansalva', cursive;
+  margin-bottom:45%;
+}
+
+.number-header {
+  font-size:16px;
+  color: #1D4355;
+  font-family: 'Roboto', sans-serif;
+}
+
+.chart-2 {
+  padding-top: 5%;
+}
 
 @media only screen and (min-width: 992px) {
   .data-vis-wrapper {
@@ -206,49 +227,7 @@ input[type="number"] {
   }
   .data-vis-wrapper .recharts-responsive-container {
     flex-basis: 50%;
-    max-width: 50%;
+    max-width: 100%;
     min-width: auto;
-    margin: 0 auto;
   }
 }
-
-/*
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-*/
