--- a/src/index.css
+++ b/src/index.css
@@ -5,34 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: grey;
+  background-color: grey;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-*{
-  background-color: grey;
-}
-
-.details-view
-{
-  color: whitesmoke;
- 
-}
-
-.EventList {
-  background-color: gray; /* Green */
-  border: none;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
-
-.CitySearch,
-.NumberOfEvents{
-  
 }
