--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
-
 html {
   box-sizing: border-box;
   overflow-x:hidden;
@@ -8,38 +7,13 @@ html {
   text-align: center;
 }
 
-ul {
-  list-style: none;
-}
-
-input[type="text"],
-input[type="number"] {
-  padding: 8px 6px 8px 10px;
-  border-radius: 4px;
-  outline: none;
-  border: 3px solid #000000;;
-  font-size: 12px;
-  line-height: 20px;
-  align-self: center;
-  height: 40px;
-  min-width: 20em;
-  max-width: 50em;
-}
-
-input[type="text"] {
-  margin-bottom:5%;
-}
-
-input[type="number"] {
-  max-width: 12em;
-  min-width: 5em;
-  margin-bottom:8%;
+body {
+  color: lightcyan;
+  background-color: grey;
 }
 
 .App {
   text-align: center;
-  align-items: center;
-  padding: 2% 5%;
   background-color: grey;
   color: #00BDD3 ;
 }
@@ -48,76 +22,62 @@ input[type="number"] {
   box-sizing: border-box;
   overflow: hidden;
   max-width: 100%;
-  align-content: center;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+p {
+  margin: 5px 0;
 }
 
 .display-none {
   display: none;
 }
-.showSuggestions {
-  display: inline-block;
-}
 
-.citysearch-label {
-  margin-top: 20%;
-  font-size: 16px;
-  color: lightgrey ;
-  border: 3px solid;
-  font-family: 'Roboto', sans-serif;
-}
-
-.number-label {
-  font-size: 16px;
-  color: lightgrey;
-  font-family: 'Roboto', sans-serif;
-  margin-right:2%;
-  border: 3px solid;
+input[type="text"],
+input[type="number"] {
+  padding: 8px 6px 8px 10px;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid #ccc;
+  font-size: 14px;
+  line-height: 20px;
+  align-self: center;
+  height: 38px;
 }
 
 .city {
   width: 250px;
 }
 
-.CitySearch {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 300px;
-  max-width: 300px;
-  margin: auto;
+.event {
+  padding: 10px 10px 35px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 8px;
   position: relative;
-  margin-top: 25%;
 }
 
-.suggestions {
-  width: 250px;
-  z-index: 3;
-  align-self: center;
-  margin: 0;
+.details-btn {
   position: absolute;
-  bottom: 60px;
-  padding-top: 3%;
-  max-height: 200px;
-  overflow-y: scroll;
-  font-size: 14px;
-  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.247);
+  right: 5px;
+  bottom: 5px;
+  padding: 5px 8px;
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
 }
 
-.suggestions > li {
-  text-align: left;
-  padding: 8px 6px 8px 10px;
-  background-color: rgb(236 249 251);
-  cursor: default;
+button.hide-details-btn:hover {
+  font-style: bold;
+  border: 1px dashed #F05454;
 }
-
-.suggestions > li:last-child {
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-}
-
-.suggestions > li:hover {
-  background-color: #dce2ca;
-}
-
 
 .name {
   font-size: 18px;
@@ -139,8 +99,8 @@ input[type="number"] {
 }
 
 .numberOfEvents {
-  max-width: 50em;
-  min-width: 20em;
+  width: 200px;
+  margin: 20px auto;
   text-align: center;
 }
 
@@ -153,6 +113,7 @@ input[type="number"] {
 }
 
 .Alert {
+  position: fixed;
   top: 20px;
 }
 
@@ -163,62 +124,10 @@ input[type="number"] {
 }
 .data-vis-wrapper .recharts-responsive-container {
   min-width: 100%;
-  max-width: 100%;
   display: flex;
 }
 .recharts-surface {
-  overflow: scroll;
-}
-
-.events-city-header {
-  color: #F2DA8B;
-  color: #EE5A66;
-  margin-bottom: 2%;
-  font-family: 'Roboto', sans-serif;
-}
-
-.chart-header {
-  font-size:35px;
-    color: #0096EF;
-    color: #1D4355;
-    margin-bottom: 5%;
-    margin-top: 10%;
-    font-family: 'Rubik', sans-serif;
-}
-.chart-title-wrapper {
-  margin-bottom: 2%;
-  font-size: 16px;
-  color: #F3D487;
-  font-family: 'Roboto', sans-serif;
-}
-
-
-.see-suggestions-input {
-  margin-bottom:2%;
-}
-
-.page-title {
-  font-size:60px;
-  color: #1D4355;
-  margin-top:15%;
-}
-
-.page-subtitle {
-  font-size:30px;
-  color:rgb(32, 166, 243);
-  transform: rotate(-8deg);
-  font-family: 'Mansalva', cursive;
-  margin-bottom:45%;
-}
-
-.number-header {
-  font-size:16px;
-  color: #1D4355;
-  font-family: 'Roboto', sans-serif;
-}
-
-.chart-2 {
-  padding-top: 5%;
+  overflow: visible;
 }
 
 @media only screen and (min-width: 992px) {
@@ -227,7 +136,34 @@ input[type="number"] {
   }
   .data-vis-wrapper .recharts-responsive-container {
     flex-basis: 50%;
-    max-width: 100%;
+    max-width: 50%;
     min-width: auto;
+    margin: 0 auto;
   }
 }
+.textNumberOfEvents{
+  margin-bottom: 5rem;
+  }
+
+  .page-subtitle{
+    color: #fd5f00;
+  }
+
+  .page-title{
+    color: #13334c;
+  }
+
+
+  .suggestions {
+    color: #fd5f00 ;
+  }
+
+  .suggestions > li {
+    background-color: #eec60a;
+    cursor: default;
+    padding: 8px 6px 8px 10px;
+  }
+  
+  .suggestions > li:hover {
+    background-color: #c50d66;
+  }
