--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,9 @@ input[type="number"] {
 
 .event {
   padding: 10px 10px 35px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-bottom: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
   text-align: center;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -72,6 +72,7 @@ input[type="number"] {
   border-radius: 4px;
   outline: none;
   cursor: pointer;
+  border: 2px solid;
 }
 
 button.hide-details-btn:hover {
@@ -102,6 +103,7 @@ button.hide-details-btn:hover {
   width: 200px;
   margin: 20px auto;
   text-align: center;
+  margin-top: 5%;
 }
 
 .button-wrapper {
@@ -142,7 +144,7 @@ button.hide-details-btn:hover {
   }
 }
 .textNumberOfEvents{
-  margin-bottom: 5rem;
+  margin-bottom: 5%;
   }
 
   .page-subtitle{
@@ -162,8 +164,15 @@ button.hide-details-btn:hover {
     background-color: #eec60a;
     cursor: default;
     padding: 8px 6px 8px 10px;
+    margin-left: 5%;
+    margin-right: 5%;
   }
   
   .suggestions > li:hover {
     background-color: #c50d66;
+  }
+
+  .suggestions > li:last-child {
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
   }
