--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,8 @@ button.hide-details-btn:hover {
 }
 .recharts-surface {
   overflow: visible;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 @media only screen and (min-width: 992px) {
